--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "ts-node-dev src/shared/infra/http/app.ts --inspect --transpile-only --ignore-watch node_modules --respawn ",
     "typeorm": "ts-node-dev ./node_modules/typeorm/cli",
-    "test": "jest",
+    "test": "NODE_ENV=test jest --runInBand",
     "seed": "ts-node-dev src/shared/infra/typeorm/seed/admin.ts"
   },
   "dependencies": {
